<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/batter_datashow_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text="@string/buildID" />

        <TextView
            android:id="@+id/battery_show_buildID"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text="@string/apartID" />

        <TextView
            android:id="@+id/battery_show_apartID"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text="@string/usedID" />

        <TextView
            android:id="@+id/battery_show_usedID"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text="@string/leaseID" />

        <TextView
            android:id="@+id/battery_show_leaseID"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="2"
            android:gravity="end|center_vertical"
            android:text="@string/recode" />

        <TextView
            android:id="@+id/battery_show_recode"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical" />
    </TableRow>

</TableLayout>