<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_footer"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/springgreen"
    android:gravity="center"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/tab_tools_layout"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/tab_tools_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:focusable="false"
            android:src="@drawable/main_tools" />

        <TextView
            android:id="@+id/tab_tools_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_tabTools"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_xxzz_layout"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/tab_xxzz_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/main_remind" />

        <TextView
            android:id="@+id/tab_xxzz_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_tabMessage"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_setting_layout"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/tab_setting_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:src="@drawable/main_setting" />

        <TextView
            android:id="@+id/tab_setting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_tabSetting"
            android:textColor="@color/black"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>